Adding terminal and connecting terminales viwes with api

--- a/src/app/terminales/terminales-list/terminales-list.component.html
+++ b/src/app/terminales/terminales-list/terminales-list.component.html
@@ -1,24 +1,17 @@
-
-<h1>Terminales</h1>
+<h1>Terminales</h1> 
 <div class="terminales-container">
-    
-<div class="container">
-    <div class="card">
+  <div class="container">
+    <div *ngFor="let terminal of terminales" class="card" (click)="verTerminal(terminal.id)">
       <div class="card-icon">
-        <img src="assets/paradalogo.png" alt="" class="card-icon">
+        <img src="assets/paradalogo.png" alt="Icono de parada" class="card-icon">
       </div>
-      <div class="card-name">Verdes</div>
+      <div class="card-name">{{ terminal.nombre }}</div>
     </div>
-    <div class="card">
-        <div class="card-icon">
-         <img src="assets/paradalogo.png" alt="" class="card-icon">
-        </div>
-        <div class="card-name">Verdes</div>
-      </div>
     <div class="action-buttons">
       <button class="action-button" routerLink="/agregarTerminal">
         Agregar terminal <i class="bx bxs-plus-square"></i>
-      </button>      
-    <button class="action-button">Mis terminales <i class='bx bx-book-content'></i></button></div>
+      </button>
+      <button class="action-button">Mis terminales <i class="bx bx-book-content"></i></button>
+    </div>
   </div>
 </div>
