--- a/src/app/terminales/terminales-list/terminales-list.component.css
+++ b/src/app/terminales/terminales-list/terminales-list.component.css
@@ -30,7 +30,7 @@
     color: black;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    background-color: aquamarine;
+    background-color: rgb(255, 255, 255);
     border: rgba(63, 63, 63, 0.189) 0.2px solid;
     cursor: pointer;
   }
