--- a/src/app/unidades/unidades-list/unidades-list.component.html
+++ b/src/app/unidades/unidades-list/unidades-list.component.html
@@ -1,22 +1,21 @@
 <h1>Mis Unidades</h1>
-
 <div class="unidades">
   <div class="unidades-horario">
     <h2>Horario</h2>
   </div>
-  <div class="unidades-container">
-    <h2>Unidades de la Terminal</h2>
+  <div class="container">
+    <h2>Unidades de la Terminal</h2><div class="unidades-container">
     <div *ngFor="let unidad of unidades" class="card" (click)="verUnidadDetalle(unidad.id)">
-      <img src="assets/default-bus.png" alt="Unidad Image" />
+      <img src="assets/carro1.png" alt="Unidad Image" />
       <h3>Unidad {{ unidad.numPlaca }}</h3>
-    </div>
-  </div>
-  <div *ngIf="mensaje" class="mensaje">
+    </div><div *ngIf="mensaje" class="mensaje">
     <p>{{ mensaje }}</p>
   </div>
-</div>
-
-<button (click)="abrirModal()">Agregar Unidad</button>
+  </div>
+  <div class="buttons">
+  <button (click)="abrirModal()">Agregar Unidad</button>
+  <button>Lista de choferes</button></div>
+</div></div>
 
 <div class="modal" *ngIf="showModal">
   <div class="modal-content">
