--- a/src/app/unidades/unidades-list/unidades-list.component.css
+++ b/src/app/unidades/unidades-list/unidades-list.component.css
@@ -34,14 +34,21 @@
   gap: 40px;
   font-family: "Jost", sans-serif;
 }
-.unidades-container{
-    width:90%;
-    height: auto;
-    display: flex;
-    align-items: flex-start;
-    font-family: "Jost", sans-serif;
-    gap: 65px;
+.unidades-container {
+  width: 90%;
+  height: 350px; 
+  display: flex;
+  flex-wrap: wrap; 
+  align-items: flex-start;
+  font-family: "Jost", sans-serif;
+  gap: 20px; 
+  background-color: #3262a3;
+  overflow-y: auto; 
+  padding: 20px; 
+  box-sizing: border-box; 
+  border: 1px solid #ccc; 
 }
+
 
 h1{
     margin-left: 180px;
@@ -69,6 +76,7 @@ h2{
   }
   
   .modal {
+    cursor: pointer;
     position: fixed;
     top: 0;
     left: 0;
@@ -84,11 +92,14 @@ h2{
   
   .modal-content {
     background: #fff;
-    border-radius: 8px;
-    padding: 20px 30px;
-    width: 400px;
+    padding: 50px 50px;
+    width: 42vw;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
+  }
+  form{
+    display: flex;
+    gap: 4rem;
   }
   
   .modal-content h2 {
@@ -103,63 +114,23 @@ h2{
     text-align: left;
   }
   
-  .modal-content label {
-    display: block;
-    font-weight: bold;
-    font-size: 14px;
-    margin-bottom: 5px;
-    color: #555;
-  }
   
   .modal-content input,
   .modal-content select {
     width: 100%;
+    height: 3rem;
     padding: 8px 10px;
-    font-size: 14px;
+    font-size: 18px;
     border: 1px solid #ccc;
-    border-radius: 4px;
     box-sizing: border-box;
-  }
-  
-  .modal-content input[type="date"] {
-    color: #555;
-  }
-  
-  .modal-content button[type="submit"] {
-    background-color: #28a745;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 30em;
+    border-radius: 15px;
+    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.219);
+    
   }
   
   .modal-content button[type="submit"]:disabled {
-    background-color: #aaa;
     cursor: not-allowed;
   }
-  
-  .modal-content button[type="submit"]:hover:not(:disabled) {
-    background-color: #218838;
-  }
-  
-  .modal-content button {
-    margin-top: 10px;
-    font-size: 14px;
-  }
-  
-  .modal-content button:last-of-type {
-    background-color: #aaa;
-    color: #fff;
-  }
-  
-  .modal-content button:last-of-type:hover {
-    background-color: #aaa;
-  }
-  
-
   .buttons{
     width: 80%;
     align-items: center;
@@ -167,10 +138,11 @@ h2{
     background-color: rgb(255, 255, 255);
     justify-content: center;
     padding: 15px;
-    gap: 165px;
+    gap: 8rem;
   }
 
-button {
+.buttons button {
+  cursor: pointer;
   width: 12em;
   height: 3em;
   border-radius: 30em;
@@ -184,7 +156,7 @@ button {
               -6px -6px 12px #ffffff;
  }
  
- button::before {
+ .buttons button::before {
   content: '';
   width: 0;
   height: 3em;
@@ -198,6 +170,183 @@ button {
   z-index: -1;
  }
  
- button:hover::before {
+ .buttons button:hover::before {
   width: 12em;
  }
+
+.buttons2{
+  width: 100%;
+  height: auto;
+  display: flex;
+  padding: 0;
+  gap: 2rem;
+}
+
+
+.part1{
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+}
+
+.part2{
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+}
+
+.add button {
+  cursor: pointer;
+  margin-top: 0.45rem;
+  width: 100%;
+  height: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+  background-color:#3262a3 ;
+  margin-bottom: 1.4rem;
+}
+
+.add button,
+.add button span {
+  transition: 200ms;
+}
+
+.add button .text {
+  cursor: pointer;
+  transform: translateX(80px);
+  color: white;
+  font-size: 1rem;
+}
+
+.add button .icon {
+  cursor: pointer;
+  position: absolute;
+  transform: translateX(220px);
+  height: 40px;
+  width: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.add button svg {
+  width: 15px;
+  fill: #276fdc;
+}
+
+.add button:hover {
+  background: #3262a3;
+}
+
+.add button:active {
+  background: #3262a3;
+}
+
+.add button:hover .text {
+  color: transparent;
+}
+
+.add button:hover .icon {
+  width: 150px;
+  margin-left: 5rem;
+  transform: translateX(0);
+}
+
+.add button:focus {
+  outline: none;
+}
+
+.add button:active .icon svg {
+  transform: scale(0.8);
+}
+
+.buttonSpan {
+  color: white;
+  margin: 150px;
+  font-size: 30px;
+}
+
+.buttons2 button {
+  cursor: pointer;
+  width: 9rem;
+  height: 3rem;
+  border: 0;
+  margin: 0;
+  font-size: 1rem;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+}
+
+.addingbutton:enabled{
+  background-color: green;
+  color: white;
+}
+
+.cancelbutton{
+  background: #a33232;
+  color: white;
+  cursor: pointer;
+}
+
+
+.photocontainer{
+  margin-top: 0.6rem;
+  background-color: #ffffff;
+  width: 100%;
+  height: 16.1vh;
+  display: flex;
+  box-shadow: 3px 3px 3px rgba(1.5, 0, 0, 0.15);
+  border-radius: 15px;
+}
+
+.add2 button{
+  width: 100px;
+  height: 132px;
+  border: 0;
+  margin: 0;
+  font-family: "Jost", sans-serif;
+  color: white;
+  background-color: #3262a3;
+  font-size: 1rem;
+}
+
+.imgcontainer{
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+ 
+.buttons3{
+  width: 100%;
+  justify-content: center;
+  align-items:center ;
+  display: flex;
+  gap: 45px;
+}
+
+.buttons3 button{
+  cursor: pointer;
+  width: 9rem;
+  height: 3rem;
+  border: 0;
+  margin: 0;
+  font-size: 1rem;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15);
+  
+}
+.cancelbutton2{
+  background-color: #3262a3;
+  color: white;
+}
+.deletebutton{
+  background-color: #a33232;
+  color: white;
+}
