--- a/src/app/unidades/unidades-list/unidades-list.component.css
+++ b/src/app/unidades/unidades-list/unidades-list.component.css
@@ -42,7 +42,7 @@
   align-items: flex-start;
   font-family: "Jost", sans-serif;
   gap: 20px; 
-  background-color: #3262a3;
+  background-color: #ffffff;
   overflow-y: auto; 
   padding: 20px; 
   box-sizing: border-box; 
