--- a/src/app/unidades/unidades-list/unidades-list.component.html
+++ b/src/app/unidades/unidades-list/unidades-list.component.html
@@ -11,7 +11,9 @@
         class="card"
         (click)="verUnidadDetalle(unidad.id)"
       >
-        <img src="assets/carro1.png" alt="Unidad Image" />
+      <div *ngIf="unidad.imagen_url" class="mainimg">
+        <img [src]="unidad.imagen_url" alt="Imagen de la unidad" class="imgMainContainer" />
+      </div>
         <h3>Unidad {{ unidad.numPlaca }}</h3>
       </div>
       <div *ngIf="mensaje" class="mensaje">
@@ -55,13 +57,16 @@
         </div>
         <div>
           <label for="marca">Marca:</label>
-          <input
+          <select
             type="text"
             id="marca"
             name="marca"
             [(ngModel)]="unidad.marca"
             required
-          />
+            >
+            <option value="Nissan">Nissan</option>
+            <option value="Toyota">Toyota</option>
+          </select>
         </div>
       </div>
       <div class="part2">
@@ -89,17 +94,6 @@
               <option value="mantenimiento">Mantenimiento</option>
             </select>
           </div>
-        </div>
-        <div class="add">
-          <button class="noselect">
-            <span class="text">Agregar imagen</span
-            ><span class="icon"
-              ><svg
-                viewBox="0 0 24 24"
-                height="24"
-                width="24"
-                xmlns="http://www.w3.org/2000/svg"></svg><span class="buttonSpan">+</span></span>
-          </button>
         </div>
         <div class="buttons2">
           <button
@@ -193,7 +187,8 @@
               <span class="text">Editar imagen</span>
             </button>
           </div>
-          <div class="imgcontainer"></div>
+          <div class="imgcontainer">
+            <img *ngIf="unidad.imagen_url" [src]="unidad.imagen_url" alt="Imagen de la unidad" class="imagen-unidad" /> </div>
         </div>
       </div>
     </form>
