Adding Footer and paradas components
-Adding styles on paradas component
-Adding footer component and styles
-Connecting Paradas component with API
-Adding service and interface for paradas

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<div class="footer">
+    <div class="part1">
+        <p>Para dudas contectanos al correo: suchibus&#64;gmail.com.mx.</p>
+    </div>
+    <div class="part2">
+        <h3>Todos los derechos reservados &#9400; SuchiBus.</h3>
+    </div>
+    <div class="part3">
+        También puedes contactarnos por el numero telefonico: +52 9612736472 de 8am a 10pm.
+    </div>
+</div>
