--- a/src/app/unidades/unidades-list/unidades-list.component.html
+++ b/src/app/unidades/unidades-list/unidades-list.component.html
@@ -1,10 +1,10 @@
-<h1>Mis Unidades</h1>
+<h1>Mis Unidades</h1> 
 <div class="unidades">
   <div class="unidades-horario">
     <h2>Horario</h2>
   </div>
   <div class="container">
-    <h2>Unidades de la Terminal</h2>
+    <h2>Unidades de la Terminal</h2><button routerLink="/paradas">Boton paradas xd</button>
     <div class="unidades-container">
       <div
         *ngFor="let unidad of unidades"
