--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,10 +3,26 @@
   <p><img src="assets/logo.png" alt="Logo" class="logo"></p>
   <div class="nav-links">
     <i class='bx bxs-user-circle icon' (click)="verDetallesUsuario()"></i>
-    <i class='bx bx-menu icon'></i>
+    <i class='bx bx-menu icon' (click)="toggleMenu()"></i>
   </div>
 </div>
 
+<div *ngIf="menuOpen" class="dropdown-menu">
+  <header>Menu</header>
+  <nav class="sidebar-nav">
+    <ul>
+      <li>
+        <a (click)="inicio()"><i class='bx bx-home bx-tada' ></i> <span>Inicio</span></a>
+        <ul class="nav-flyout">
+          <li><a (click)="mostrarAdministradores()"><i class='bx bxs-user-detail' ></i>Administradores</a></li>
+          <li><a (click)="mostrarChoferes()"><i class='bx bxs-id-card'></i>Choferes</a></li>
+          <li><a ><i class='bx bx-bus'></i>Unidades</a></li>
+          <li><a href=""><i class='bx bx-exit bx-rotate-180' style='color:#ffffff' ></i>Cerrar Sesion</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+</div>
 
 <div *ngIf="showModal" class="modal-backdrop">
   <div class="modal">
