--- a/src/app/terminales/agregarterminal/agregarterminal.component.css
+++ b/src/app/terminales/agregarterminal/agregarterminal.component.css
@@ -36,7 +36,7 @@
     margin-bottom: 3rem;
   }
   
-  .input-group input {
+  .input-group input, select {
     flex: 1;
     width: 260px;
     height: 25px;
