--- a/src/app/terminales/terminales-list/terminales-list.component.html
+++ b/src/app/terminales/terminales-list/terminales-list.component.html
@@ -1,17 +1,15 @@
 <h1>Terminales</h1> 
 <div class="terminales-container">
   <div class="container">
+    <div class="action-buttons">
+      <app-b-agg-terminal [showbutton]="true"></app-b-agg-terminal>
+      <button class="action-button">Mis terminales <i class="bx bx-book-content"></i></button>
+    </div>
     <div *ngFor="let terminal of terminales" class="card" (click)="verTerminal(terminal.id)">
       <div class="card-icon">
         <img src="assets/paradalogo.png" alt="Icono de parada" class="card-icon">
       </div>
       <div class="card-name">{{ terminal.nombre }}</div>
-    </div>
-    <div class="action-buttons">
-      <button class="action-button" routerLink="/agregarTerminal">
-        Agregar terminal <i class="bx bxs-plus-square"></i>
-      </button>
-      <button class="action-button">Mis terminales <i class="bx bx-book-content"></i></button>
     </div>
   </div>
 </div>
